# IngestAI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  compose.yaml  hadoop.env  main.py  pyproject.toml
config/: core-site.xml  hdfs-site.xml  hive-site.xml  mapred-site.xml  tez-site.xml  yarn-site.xml
hive_schema/: 01_create_config_tables.sql  02_create_dq_tables.sql  03_create_silver_tables.sql  04_seed_initial_config.sql
scripts/: generate_sample_data.py  hdfs_verify.sh  hive_query_runner.py  hive_setup_schema.py  upload_to_hdfs.py
test/: run_test.sh  test_hive.sql  test_pipeline.py
