[project]
name = "mif"
version = "0.1.0"
description = "Metadata-driven ingestion framework with data quality rules"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",

    "pandas>=2.2.0",
    "faker>=25.0.0",
]
readme = "README.md"

[dependency-groups]
dev = [
    "ruff>=0.11.5",
    "pre-commit>=4.2.0",

    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 130
exclude = [".venv/**"]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errors, warnings, imports

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"